[package]
name = "api_actix-web_rust_hello-world"
version = "0.1.0"
authors = ["Sebastian Estrella <sestrella@stackbuilders.com>"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = { version = "4.3.0" , features = ["rustls"] }
actix-web-httpauth = "0.8.0"
awc = { version = "3.1.0", features = [ "rustls" ] }
derive_more = "^0.99.16"
dotenv = "^0.15.0"
env_logger = "0.10.0"
envy = "^0.4.2"
jsonwebtoken = "^8.2.0"
serde = "^1.0.152"
